# dbus-cec

./: .rustfmt.toml  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yaml
assets/: com.home.HdmiCec.conf
debian/: service
rpi/: Cargo.toml  Dockerfile  README.md
rpi-tv-cec/: Cargo.toml  README.md
rpi-tv-cec/debian/: service
rpi/debian/: service
rpi/src/: main.rs
src/: interface.rs  lib.rs  main.rs  power_status.rs  request.rs
