[package]
name = "dbus-cec"
version = "1.0.0"
edition = "2024"
description = "Raspberry Pi DBus service for TV power control through HDMI-CEC"
license = "MIT"
authors = ["Bogdan Mircea"]

[package.metadata.deb]
maintainer-scripts = "debian/"
systemd-units = {}
depends = ["libcec6", "libp8-platform2"]
assets = [
    { source = "target/release/dbus-cec", dest = "/usr/bin/dbus-cec", mode = "0755" },
    { source = "assets/com.home.HdmiCec.conf", dest = "/usr/share/dbus-1/system.d/com.home.HdmiCec.conf", mode = "0644" }
]

[package.metadata.cross.target.aarch64-unknown-linux-gnu]
dockerfile = "Dockerfile"

[dependencies]
cec-rs = { version = "12", default-features = false }
serde = { version = "1", default-features = false, features = ["derive", "std"] }
tokio = { version = "1", default-features = false, features = ["macros", "rt", "sync"] }
tracing = { version = "0.1", default-features = false, features = ["attributes", "std"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["ansi", "fmt", "env-filter", "smallvec", "std", "tracing-log"]}
zbus = { version = "5", default-features = false, features = ["tokio"] }

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[lints.rust]
rust_2018_idioms = { level = "warn", priority = -1 }
rust_2021_compatibility = { level = "warn", priority = -1 }
meta_variable_misuse = "warn"
missing_abi = "warn"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
non_ascii_idents = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"
