[package]
name = "dbus-cec"
description = "Library for creating daemons to control CEC devices over DBus"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
cec-rs = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
zbus = { workspace = true }

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"

[workspace]
members = [".", "rpi"]

[workspace.package]
version = "1.0.0"
authors = ["Bogdan Mircea <mirceapetrebogdan@gmail.com>"]
edition = "2024"
repository = "https://github.com/bobozaur/dbus-cec"
license = "MIT"

[workspace.dependencies]
# Internal
dbus-cec = { path = "." }

# External
cec-rs = { version = "12", default-features = false }
serde = { version = "1", default-features = false, features = ["derive", "std"] }
tokio = { version = "1", default-features = false, features = ["macros", "rt", "sync"] }
tracing = { version = "0.1", default-features = false, features = ["attributes", "std"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["ansi", "fmt", "env-filter", "smallvec", "std", "tracing-log"]}
zbus = { version = "5", default-features = false, features = ["tokio"] }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"

[workspace.lints.rust]
rust_2018_idioms = { level = "warn", priority = -1 }
rust_2021_compatibility = { level = "warn", priority = -1 }
meta_variable_misuse = "warn"
missing_abi = "warn"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
non_ascii_idents = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"
