[package]
name = "rpi-tv-cec"
description = "Raspberry Pi D-Bus daemon for TV power control through HDMI-CEC "
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[package.metadata.deb]
maintainer-scripts = "debian/"
systemd-units = {}
depends = []
assets = [
    "$auto",
    { source = "../assets/com.home.HdmiCec.conf", dest = "/usr/share/dbus-1/system.d/com.home.HdmiCec.conf", mode = "0644" }
]

[package.metadata.cross.target.aarch64-unknown-linux-gnu]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get --assume-yes install libudev-dev:$CROSS_DEB_ARCH libc6-dev:$CROSS_DEB_ARCH"
]

[package.metadata.cross.target.aarch64-unknown-linux-gnu.env]
passthrough = ["LIBCEC_STATIC=1"]

[dependencies]
# Internal
dbus-cec = { workspace = true }

# External
tokio = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
