[package]
name = "rpi"
description = "Raspberry Pi D-Bus daemon for TV power control through HDMI-CEC "
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[package.metadata.deb]
name = "dbus-cec"
maintainer-scripts = "../debian/"
systemd-units = {}
depends = ["libcec6", "libp8-platform2"]
assets = [
    { source = "target/release/rpi", dest = "/usr/bin/dbus-cec", mode = "0755" },
    { source = "../assets/com.home.HdmiCec.conf", dest = "/usr/share/dbus-1/system.d/com.home.HdmiCec.conf", mode = "0644" }
]

[package.metadata.cross.target.aarch64-unknown-linux-gnu]
dockerfile = "rpi/Dockerfile"

[dependencies]
# Internal
dbus-cec = { workspace = true }

# External
tokio = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
